[gd_scene load_steps=11 format=3 uid="uid://dbfv50atc2q2s"]

[ext_resource type="Script" uid="uid://fjls6m01sjqo" path="res://scripts/pause.gd" id="1_jn4bt"]
[ext_resource type="Texture2D" uid="uid://cvd21a4xyhqw1" path="res://assets/buttons/resume.png" id="2_r1fnm"]
[ext_resource type="Shader" uid="uid://8s63b8vpye2k" path="res://Shaders/blur.gdshader" id="2_wen6a"]
[ext_resource type="Texture2D" uid="uid://dkqow28gvry6c" path="res://assets/buttons/controls.png" id="3_wen6a"]
[ext_resource type="Texture2D" uid="uid://jojj4h5ucx6n" path="res://assets/buttons/mainmenu.png" id="4_cml1b"]
[ext_resource type="Texture2D" uid="uid://bvc8n8t6dg18h" path="res://assets/buttons/quit.png" id="5_1xtef"]
[ext_resource type="Texture2D" uid="uid://gjhny13djrb" path="res://assets/buttons/background.png" id="7_1xtef"]
[ext_resource type="FontFile" uid="uid://8uhqyflogrwk" path="res://assets/PIXEARG_.TTF" id="8_xmhi0"]
[ext_resource type="Texture2D" uid="uid://42qxvj128qt5" path="res://assets/buttons/back.png" id="9_xw83q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cml1b"]
shader = ExtResource("2_wen6a")
shader_parameter/lod = 1.154

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jn4bt")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cml1b")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 357.0
offset_top = 64.0
offset_right = 503.0
offset_bottom = 240.0
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Controls")
icon = ExtResource("2_r1fnm")

[node name="Controls" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../MainMenu")
icon = ExtResource("3_wen6a")

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_bottom = NodePath("../Quit")
icon = ExtResource("4_cml1b")

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Resume")
icon = ExtResource("5_1xtef")

[node name="Controls" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(576, 328)
scale = Vector2(3.24638, 4)
texture = ExtResource("7_1xtef")

[node name="Controls" type="Label" parent="Controls"]
texture_filter = 1
offset_left = -51.75
offset_top = -50.0
offset_right = 210.25
offset_bottom = 122.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_xmhi0")
theme_override_font_sizes/font_size = 16
text = "W / Joystick Up = Up
S / Joystick Down = Down
A / Joystick Left = Left
D / Joystick Right = Right
K / Joypad A = Interact
esc / Joypad Start = Pause"

[node name="back" type="Button" parent="Controls"]
offset_left = -58.5268
offset_top = 22.0
offset_right = 87.4732
offset_bottom = 63.0
scale = Vector2(0.8, 0.8)
icon = ExtResource("9_xw83q")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Controls/back" to="." method="_on_back_pressed"]
